--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "^14.0.0",
-    "express": "^4.17.1",
     "body-parser": "^1.19.0",
+    "discord.js": "^14.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
     "node-fetch": "^3.0.0"
   }
 }
