--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js": "^14.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "winston": "^3.13.1"
   }
 }
